force-app/main/default/objects/Training_Activity__c/Training_Activity__c.object-meta.xml
<CustomObject>
    <description>Custom object to relate activities with trainings</description>
    <label>Training Activity</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Training Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>