force-app/main/default/objects/Training_Activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Training Activities</relationshipLabel>
    <relationshipName>Training_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>