force-app/main/default/objects/Training_Activity__c/fields/Activity_Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Activity_Total_Minutes__c</fullName>
    <formula>Activity__r.Total_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Total Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>