force-app/main/default/objects/Training_Activity__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Training Activities</relationshipLabel>
    <relationshipName>Training_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>